# datamachine

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml  setup.cfg
src/datamachine/: __init__.py  _modular.py  xxx.py
src/datamachine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
