[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamachine"
version = "0.1.2"
dependencies = []
authors = [
  { name="Dave Killough", email="dave@benevolentmachines.org" },
]
description = "Modular Notebooks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]  # Optional
"Project" = "https://github.com/dave-killough/datamachine"
