[metadata]
name = datamachine
version = 0.0.8
author = Dave Killough
author_email = dave.killough@gmail.com
description = A data machine made of modular Python notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/datamachine
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src